# reddit-ceo-characteristics-scrape

./: .gitignore  .prettierrc.js  CLAUDE.md  PIDGIN_EXPLAINER.md  README.md  RESUME.md  STEP_BY_STEP.md  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
configs/: settings.py
data/: ceo_year_finbert_abc_merged_updated.csv  ceo_year_finbert_scores.csv
data/discovery/: candidate_subreddits.csv
data/inputs/: CEO_Integrity_Dictionary.csv  CEO_Narcissism_Dictionary.csv
data/processed/: ceo_universe.parquet
data/reports/: ceo_year_dict_scores.csv  false_positive_audit.csv  transcript_extraction_report.json
docs/: ARCHITECTURE_DECISIONS.md  LAYER1_PIPELINE.md  LAYER2_DICTIONARY_SCORING.md  LAYER2_FINBERT_COLAB_GUIDE.md  TRANSCRIPT_PIPELINE.md
notebooks/corpus_analysis/: 01_ceo_mention_coverage.ipynb  02_executed.ipynb  02_validation_false_positives.ipynb  03_finbert_scoring_colab.ipynb  04_master_pipeline_finbert_colab.ipynb  05_master_pipeline_roberta_colab.ipynb
scripts/: merge_finbert_abc.py  resume_download.sh
src/ceo_reddit/discovery/: load_subreddit_metadata.py  parse_subreddit.py
src/ceo_reddit/filtering/: filter_pipeline.py  matcher.py
src/ceo_reddit/reference/: build_ceo_universe.py  build_search_patterns.py
src/ceo_reddit/scoring/: dictionary_scorer.py  score_utterances.py
src/ceo_reddit/transcripts/: extract_ceo_utterances.py
src/ceo_reddit/utils/: db.py  streaming.py
tests/: test_load_subreddit_metadata.py
