[project]
name = "ceo-reddit"
version = "0.1.0"
description = "Reddit CEO characteristics extraction pipeline for self-presentation discrepancy research"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.0",
    "zstandard>=0.25.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
