[project]
name = "ceo-reddit"
version = "0.1.0"
description = "Reddit CEO characteristics extraction pipeline for self-presentation discrepancy research"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.0",
    "zstandard>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import ordering)
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "T20",   # flake8-print (no print statements)
    "RET",   # flake8-return
    "PTH",   # flake8-use-pathlib
    "ERA",   # flake8-eradicate (commented-out code)
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src", "configs"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
